--- a/scss/object/component/_c-sec-ttl.scss
+++ b/scss/object/component/_c-sec-ttl.scss
@@ -2,6 +2,7 @@
 
 .c-sec-ttl {
     text-align: center;
+    margin-bottom: rem(32);
     h3 {
         font-size: 2rem;
         margin-bottom: 0.5rem;
