--- a/scss/object/component/_c-sec-ttl.scss
+++ b/scss/object/component/_c-sec-ttl.scss
@@ -5,6 +5,7 @@
     margin-bottom: rem(32);
     h3 {
         font-size: 2rem;
+        font-weight: bold;
         margin-bottom: 0.5rem;
     }
     p {
