--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -305,6 +305,7 @@ a.next.page-numbers {
 }
 .c-sec-ttl h3 {
   font-size: 2rem;
+  font-weight: bold;
   margin-bottom: 0.5rem;
 }
 .c-sec-ttl p {
@@ -436,6 +437,30 @@ a.next.page-numbers {
 .l-footer-copy {
   text-align: center;
 }
+@media screen and (min-width:860px) {
+  .p-footer-nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: auto;
+    margin: 0 auto;
+  }
+
+  .p-footer-nav__item {
+    padding: 0.5rem 1rem;
+  }
+  .p-footer-nav__item a {
+    color: #ffffff;
+    font-weight: bold;
+  }
+  .p-footer-nav__item:not(:last-child) {
+    border-bottom: none;
+    border-right: 2px solid #ffffff;
+  }
+}
 .p-fv {
   padding-top: 5rem;
   height: 23.75rem;
@@ -471,6 +496,23 @@ a.next.page-numbers {
     background-size: cover;
   }
 }
+@media screen and (min-width:860px) {
+  .p-fv {
+    padding-top: 5rem;
+    height: 36.25rem;
+  }
+
+  .p-fv-copy {
+    left: 50%;
+  }
+  .p-fv-copy p {
+    font-size: 4.5rem;
+    color: #ffffff;
+  }
+  .p-fv-copy p:last-child {
+    margin-left: 4rem;
+  }
+}
 .p-header-logo {
   width: 80px;
   height: 52px;
@@ -494,7 +536,7 @@ a.next.page-numbers {
 
 .p-header-nav__list {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -507,6 +549,7 @@ a.next.page-numbers {
   margin-bottom: 1rem;
 }
 .p-header-nav__item:last-child {
+  width: 175px;
   background-color: #00B906;
 }
 .p-header-nav__item:last-child a {
@@ -543,6 +586,11 @@ a.next.page-numbers {
   bottom: 0;
 }
 @media screen and (min-width:860px) {
+  .p-header-logo {
+    width: 100px;
+    height: 70px;
+  }
+
   .p-header-nav {
     position: static;
     background-color: #ffffff;
@@ -578,6 +626,7 @@ a.next.page-numbers {
   }
   .p-header-nav__item a {
     color: #000000;
+    font-size: 1.2rem;
   }
 
   .p-header-nav {
@@ -594,6 +643,7 @@ a.next.page-numbers {
   padding-right: 0.5rem;
   padding-bottom: 2rem;
   padding-left: 0.5rem;
+  overflow: hidden;
 }
 
 .p-news-inner {
@@ -605,6 +655,9 @@ a.next.page-numbers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 2rem;
 }
 
@@ -624,10 +677,14 @@ a.next.page-numbers {
 
 .p-news-top__img {
   position: relative;
-  width: 11.375rem;
   width: calc(100% - 180px);
   margin-top: -1rem;
   margin-right: -2rem;
+}
+
+.p-news-cont {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .p-news-cont__ttl {
@@ -652,6 +709,9 @@ a.next.page-numbers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-bottom: dotted 2px;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -664,11 +724,11 @@ a.next.page-numbers {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 4.5rem;
+  margin-right: min(4.5rem, 19.2vw);
 }
 
 .p-news-txt {
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 
 .p-news-txt__exc {
@@ -682,6 +742,31 @@ a.next.page-numbers {
   text-decoration: underline;
 }
 
+@media screen and (min-width:480px) {
+  .p-news-top__img {
+    position: relative;
+    width: calc(100% - 180px);
+    max-width: 450px;
+    margin-top: -1rem;
+    margin-right: -4rem;
+  }
+
+  .p-news-top__txt p {
+    font-size: 1.5rem;
+    line-height: 1.6875rem;
+    letter-spacing: -1px;
+  }
+
+  .p-news-txt {
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width:860px) {
+  .p-news-top__txt p {
+    font-size: 2.5rem;
+    line-height: 1.2;
+  }
+}
 .p-products {
   padding-top: 2rem;
   padding-right: 0.5rem;
@@ -705,6 +790,11 @@ a.next.page-numbers {
   padding-left: 0.5rem;
 }
 
+.p-recipe-inner {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 .p-recipe-tabs {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -724,7 +814,7 @@ a.next.page-numbers {
           align-items: end;
   background-color: #298800;
   color: #ffffff;
-  font-size: 0.875rem;
+  font-size: min(0.875rem, 3.75vw);
   font-weight: bold;
   height: 4rem;
   width: calc((100% - 16px) / 5);
@@ -764,6 +854,10 @@ a.next.page-numbers {
   display: none;
 }
 
+.p-recipe-cont__item {
+  margin: 0 auto;
+  max-width: 450px;
+}
 .p-recipe-cont__item:not(:last-child) {
   margin-bottom: 3.5rem;
 }
@@ -834,6 +928,71 @@ a.next.page-numbers {
   font-size: 1.375rem;
 }
 
+@media screen and (min-width:480px) {
+  .p-recipe-tab {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+    font-size: 1.25rem;
+  }
+  .p-recipe-tab:nth-child(4) p {
+    width: 6.625rem;
+  }
+  .p-recipe-tab:not(:last-child) {
+    margin-right: 0.25rem;
+  }
+  .p-recipe-tab p {
+    margin-left: auto;
+    text-align: end;
+  }
+  .p-recipe-tab p span:last-child {
+    margin-left: 1rem;
+  }
+}
+@media screen and (min-width:860px) {
+  .p-recipe-tab {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+    font-size: 1.5rem;
+  }
+  .p-recipe-tab:nth-child(4) p {
+    width: 6.625rem;
+  }
+  .p-recipe-tab:not(:last-child) {
+    margin-right: 0.25rem;
+  }
+  .p-recipe-tab p {
+    margin-left: auto;
+    text-align: end;
+  }
+  .p-recipe-tab p span:last-child {
+    margin-left: 1rem;
+  }
+
+  .p-recipe-cont__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .p-recipe-cont__item {
+    margin: 0 auto;
+    width: calc((100% - 2rem) / 2);
+    max-width: 400px;
+  }
+  .p-recipe-cont__item:not(:last-child) {
+    margin-bottom: 3.5rem;
+  }
+}
 .u-dn {
   display: none;
 }
