--- a/scss/object/project/front-page/_p-footer.scss
+++ b/scss/object/project/front-page/_p-footer.scss
@@ -76,3 +76,24 @@
     text-align: center;
     small {}
 }
+
+@include mq () {
+    .p-footer-nav__list {
+        display: flex;
+        justify-content: center;
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .p-footer-nav__item {
+        padding: 0.5rem 1rem;
+        a {
+            color: $white;
+            font-weight: bold;
+        }
+        &:not(:last-child) {
+            border-bottom: none;
+            border-right: 2px solid $white;
+        }
+    }
+}
