--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -993,6 +993,130 @@ a.next.page-numbers {
     margin-bottom: 3.5rem;
   }
 }
+.p-swiper {
+  padding-top: 5rem;
+}
+
+.p-swiper-item {
+  height: 300px;
+}
+
+.p-swiper-img {
+  padding-top: 0;
+  height: 300px;
+}
+.swiper-wrapper {
+  height: 300px;
+  overflow: hidden;
+}
+
+.p-swiper-img__meta {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  top: 1rem;
+  left: 5%;
+  width: 95%;
+  max-width: 600px;
+}
+
+.p-swiper-img__tag {
+  background-color: #298800;
+  padding: 0.5rem 0.8rem;
+  border-radius: 10px;
+  font-size: max(0.75rem, 4vw);
+  color: #ffffff;
+}
+
+.p-swiper-img__ttl {
+  width: calc(100% - min(275px, 49vw));
+  font-size: max(1rem, 6.4vw);
+  color: #ffffff;
+  text-shadow: 0.5px 0.5px 0px #000000;
+  margin-left: 1rem;
+}
+
+@media screen and (min-width:480px) {
+  .p-swiper-item {
+    height: 450px;
+  }
+
+  .swiper-wrapper {
+    height: 450px;
+  }
+
+  .p-swiper-img__meta {
+    top: 2rem;
+    max-width: 450px;
+    left: calc(50% - 225px);
+  }
+
+  .p-swiper-img__tag {
+    width: 205px;
+    font-size: 1.25rem;
+  }
+
+  .p-swiper-img__ttl {
+    width: calc(100% - 216px);
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width:860px) {
+  .p-swiper-item {
+    height: 500px;
+  }
+
+  .swiper-wrapper {
+    height: 500px;
+  }
+
+  .p-swiper-img__meta {
+    top: 2rem;
+    width: 70%;
+    max-width: 800px;
+    left: calc(50% - 300px);
+  }
+
+  .p-swiper-img__tag {
+    width: 240px;
+    font-size: 1.5rem;
+  }
+
+  .p-swiper-img__ttl {
+    font-size: 2rem;
+    width: calc(100% - 380px);
+  }
+}
+@media screen and (min-width:1280px) {
+  .p-swiper-item {
+    height: 600px;
+  }
+
+  .swiper-wrapper {
+    height: 600px;
+  }
+
+  .p-swiper-img__meta {
+    width: 70%;
+    max-width: 900px;
+    left: calc(50% - 400px);
+  }
+
+  .p-swiper-img__tag {
+    padding: 1rem 0.8rem;
+    width: 310px;
+    font-size: 2rem;
+  }
+
+  .p-swiper-img__ttl {
+    font-size: 2.5rem;
+    width: calc(100% - 380px);
+  }
+}
 .u-dn {
   display: none;
 }
