--- a/scss/object/project/single-recipe/_p-detail.scss
+++ b/scss/object/project/single-recipe/_p-detail.scss
@@ -1,6 +1,7 @@
 @use "global" as *;
 
 .p-detail {
+    background-color: $white;
     padding-top: rem(64);
     padding-bottom: rem(64);
     video {
@@ -33,8 +34,6 @@
     }
 }
 
-
-
 .p-detail-inner {}
 
 .p-detail-ttl{}
@@ -49,5 +48,40 @@
         color: $white;
         background-color: $navy;
         padding: 0.5rem;
+    }
+}
+
+@include mq (sp) {
+    .p-detail {
+        padding-top: rem(64);
+        padding-bottom: rem(64);
+        video {
+            display: block;
+            width: 100%;
+            max-width: 900px;
+            margin: 0 auto;
+            margin-bottom: rem(48);
+        }
+        table {
+            background-color: $l-green;
+            width: calc(100% - 2rem);
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 1.5rem ;
+            &:first-of-type {
+                margin-bottom: rem(48);
+            }
+        }
+        tbody {
+        }
+        tr {
+            display: flex;
+            justify-content: space-between;
+            padding: 1rem 0.25rem;
+            border-bottom: dotted 2px $black;
+        }
+        td {
+            line-height: 1.2;
+        }
     }
 }
