--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -521,7 +521,7 @@ a.next.page-numbers {
 
 .p-header-nav {
   position: fixed;
-  background-color: #298800;
+  background-color: #00B906;
   top: 80px;
   right: 0;
   right: -320px;
@@ -537,7 +537,7 @@ a.next.page-numbers {
 
 .p-header-nav__list {
   position: absolute;
-  top: 30%;
+  top: 250px;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -547,14 +547,12 @@ a.next.page-numbers {
   font-size: 1.5rem;
 }
 .p-header-nav__item:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 .p-header-nav__item:last-child {
   width: 175px;
   background-color: #00B906;
-}
-.p-header-nav__item:last-child a {
-  color: #ffffff;
+  border: 1px solid #ffffff;
 }
 .p-header-nav__item a {
   color: #ffffff;
@@ -628,6 +626,9 @@ a.next.page-numbers {
   .p-header-nav__item a {
     color: #000000;
     font-size: 1.2rem;
+  }
+  .p-header-nav__item:last-child a {
+    color: #ffffff;
   }
 
   .p-header-nav {
@@ -1002,6 +1003,7 @@ a.next.page-numbers {
 .p-detail video {
   display: block;
   width: 100%;
+  height: 235px;
   max-width: 900px;
   margin: 0 auto;
   margin-bottom: 3rem;
@@ -1049,11 +1051,7 @@ a.next.page-numbers {
     padding-bottom: 4rem;
   }
   .p-detail video {
-    display: block;
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-    margin-bottom: 3rem;
+    height: auto;
   }
   .p-detail table {
     background-color: #eaf4dc;
