--- a/scss/object/component/_c-btn.scss
+++ b/scss/object/component/_c-btn.scss
@@ -1,14 +1,13 @@
-@use "../../global" as *;
+@use "global" as *;
 
 .c-ctaBtn {
-    display: inline-block;
     position: relative;
-    width: 142px;
-    border-radius: 5px;
-    padding-top: 1.125rem;
-    padding-bottom: 1.125rem;
+    width: 150px;
     text-align: center;
-    p {
+    a {
+        border-radius: 5px;
+        display: inline-block;
+        line-height: rem(60);
         color: $white;
         font-weight: bold;
     }
@@ -24,6 +23,7 @@
     outline: none;
     appearance: none;
     cursor: pointer;
+    transition: 1s;
     &:hover {
         opacity: .7;
     }
