--- a/scss/object/project/front-page/_p-header.scss
+++ b/scss/object/project/front-page/_p-header.scss
@@ -11,7 +11,7 @@
 
 .p-header-nav {
     position: fixed;
-    background-color: $green;
+    background-color: $white;
     top: 80px;
     right: 0;
     right: -320px;
@@ -35,16 +35,37 @@
     font-size: 1.5rem;
     &:not(:last-child) {
         margin-bottom: 1.5rem;
+        padding-bottom: 1rem;
+        border-bottom: 2px solid $black;
+        a {
+            display: inline-block;
+            width: 175px;
+            padding-right: 0.5rem;
+            padding-left: 0.5rem;
+            @include txt-border($green);
+            &::after {
+                z-index: -1;
+                bottom: -1rem;
+                height: rem(64);
+                transition: transform 1.5s;
+            }
+            &:hover {
+                color: $white;
+            }
+        }
     }
     &:last-child {
         width: 175px;
-        background-color: $green;
-        border: 1px solid $white;
         a {
+            display: block;
+            color: $white;
+            background-color: $green;
+            border-radius: 5px;
+            @include btn-anime-2;
         }
     }
     a {
-        color: $white;
+        color: $black;
         font-weight: bold;
     }
 
@@ -106,15 +127,24 @@
         left: 0;
         transform: translate(0,0);
     }
-    
+
     .p-header-nav__item {
         font-size: 1rem;
         &:not(:last-child) {
             margin-bottom: 0;
-            margin-right: 1rem;
+            padding-bottom: 0;
+            border-bottom: none;
+            a {
+                width: auto;
+                padding-right: 0.8rem;
+                padding-left: 0.8rem;
+                &::after {
+                    bottom: -1.9rem;
+                    height: 5rem;
+                }
+            }
         }
         a {
-            color: $black;
             font-size: 1.2rem;
         }
         &:last-child {
@@ -122,7 +152,6 @@
                 color: $white;
             }
         }
-    
     }
     .p-header-nav {
         display: block;
