--- a/scss/object/project/single-recipe/_p-menu.scss
+++ b/scss/object/project/single-recipe/_p-menu.scss
@@ -24,7 +24,6 @@
     background-color: $green;
     width: calc( (100% - 0.25rem)/2);
     height: 50px;
-    padding: 0.5rem 0.25rem;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -36,9 +35,19 @@
         margin-top: 0.25rem;
     }
     a {
+        display: inline-block;
+        width: 100%;
+        height: 50px;
         color: $white;
-        font-size: 1.4rem;
         font-size: min(2rem, 7.2vw);
+        padding: 0.5rem 0.2rem;
+        box-shadow: 2px 2px 5px $navy;
+        transition: 0.5s;
+        &:hover {
+            box-shadow: 5px 5px 10px $navy;
+            margin-bottom: rem(2);
+            opacity: 0.7;
+        }
         span {
             font-size: rem(12);
             margin-left: 0.25rem;
@@ -51,10 +60,14 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
+        padding: 0.1rem 0.25rem;
         span {
             &:first-child {
-                font-size: 1.2rem;
-                line-height: 1.1rem;
+                font-size: 1.4rem;
+                text-indent:-1em;
+                margin-left: 0;
+            }
+            &:last-child {
                 margin-left: 0;
             }
         }
@@ -63,31 +76,19 @@
 
 @include mq (sp) {
     .p-menu-btn {
-        height: 50px;
-        padding: 0.5rem 0.25rem;
-        &:nth-child(odd) {
-            margin-right: 0.25rem;
-        }
-        &:nth-child(n+3) {
-            margin-top: 0.25rem;
-        }
+        height: 60px;
         a {
-            color: $white;
-            font-size: 1.4rem;
-            font-size: min(2rem, 7.2vw);
-            span {
-                font-size: rem(12);
-                margin-left: 0.25rem;
-            }
+            height: 60px;
+            font-weight: bold;
+            padding: rem(15) 0.25rem;
         }
     }
     .p-menu-btn__drink {
         a {
+            padding: 0.5rem 0.25rem;
             span {
                 &:first-child {
-                    font-size: 1.2rem;
-                    line-height: 1.1rem;
-                    margin-left: 0;
+                    line-height: 1;
                 }
             }
         }
@@ -96,8 +97,7 @@
 
 @include mq () {
     .p-menu-btn {
-        height: 50px;
-        padding: 0.5rem 0.25rem;
+        height: 70px;
         width: calc( (100% - 0.75rem)/4);
         &:nth-child(2),
         &:nth-child(6){
@@ -110,11 +110,49 @@
             margin-top: 0.25rem;
         }
         a {
-            color: $white;
-            font-size: 1.4rem;
-            font-size: min(2rem, 7.2vw);
+            height: 70px;
+            font-size: rem(36);
+            padding: rem(16) 0.25rem;
             span {
                 font-size: rem(12);
+                margin-left: 0.25rem;
+            }
+        }
+    }
+    .p-menu-btn__drink {
+        a {
+            padding: 0.5rem 0.25rem;
+            span {
+                &:first-child {
+                    line-height: 1;
+                    font-size: rem(28);
+                }
+            }
+        }
+    }
+}
+@include mq (pc) {
+    .p-menu-btn {
+        height: 80px;
+        width: calc( ( 100% - 0.5rem*3 )/4);
+        &:nth-child(odd) {
+            margin-right: 0.5rem;
+        }
+        &:nth-child(2),
+        &:nth-child(6){
+            margin-right: 0.5rem;
+        }
+        &:nth-child(n+3) {
+            margin-top: 0;
+        }
+        &:nth-child(n+5) {
+            margin-top: 0.5rem;
+        }
+        a {
+            height: 80px;
+            font-size: rem(48);
+            span {
+                font-size: rem(16);
                 margin-left: 0.25rem;
             }
         }
